--- a/style.css
+++ b/style.css
@@ -38,13 +38,13 @@ article {
     justify-content: space-between;
 }
 
-h1 {
+h2 {
     color: hsl(0, 0%, 100%);
     font-size: 2rem;
     font-weight: bold;
 }
 
-h1 span {
+h2 span {
     color: hsl(277, 64%, 61%);
 }
 
